--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
   name: github
   repo: yazaki-lab/yazaki.lab.uec.ac.jp
-  branch: main
+  branch: main # Branch to update
+  base_url: https://netlify-cms-oauth-brown.vercel.app
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
