ローカル環境用のDecapを整備

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,12 +1,6 @@
+local_backend: true
 backend:
   name: git-gateway
-  repo: yazaki-lab/yazaki.lab.uec.ac.jp
-  branch: main
-
-# # when using the default proxy server port
-# local_backend: true
-# backend:
-#   name: git-gateway
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
