--- a/hugo.toml
+++ b/hugo.toml
@@ -1,37 +1,37 @@
 baseURL = 'https://yazaki.lab.uec.ac.jp/'
 languageCode = 'ja-jp'
-title = '電気通信大学 矢﨑研究室'
+title = 'Yazaki Lab., UEC'
 theme = 'yazaki-lab'
 
 [menus]
+#[[menus.main]]
+#    name = 'Top'
+#    pageRef = '/'
+#    weight = 10
+# [[menus.main]]
+#    name = '記事一覧'
+#    pageRef = '/posts'
+#    weight = 20
 [[menus.main]]
-    name = 'Top'
-    pageRef = '/'
-    weight = 10
-[[menus.main]]
-    name = '記事一覧'
-    pageRef = '/posts'
-    weight = 20
-[[menus.main]]
-    name = '研究室紹介'
+    name = 'About'
     pageRef = '/about'
     weight = 30
 [[menus.main]]
-    name = 'メンバー'
+    name = 'Member'
     pageRef = '/members'
     weight = 40
 [[menus.main]]
-    name = '対外発表'
+    name = 'Publish'
     pageRef = '/papers'
     weight = 50
 [[menus.main]]
-    name = '卒論・修論'
+    name = 'Projects'
     pageRef = '/theses'
     weight = 60
-[[menus.main]]
-    name = '連絡先'
-    pageRef = '/contact'
-    weight = 70
+#[[menus.main]]
+#    name = 'Contact'
+#    pageRef = '/contact'
+#    weight = 70
 
 [params]
 subtitle = "The Best Widgets on Earth"
