一通りの紹介を追加

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -47,4 +47,10 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - label: "Projects"
+        name: "projects"
+        file: "content/projects.md"
+        fields:
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
 
