Update Makefile to use Docker for Hugo builds and remove netlify.toml; adjust GitHub Actions workflow for Docker-based build

--- a/.github/workflows/deploy-hugo.yml
+++ b/.github/workflows/deploy-hugo.yml
@@ -17,14 +17,12 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
-        with:
-          hugo-version: '0.119.0'
-          # extended: true
-
-      - name: Build
-        run: hugo --minify
+      - name: Build with Docker
+        run: |
+          docker run --rm \
+            -v ${{ github.workspace }}:/src \
+            hugomods/hugo:exts-0.127.0 \
+            hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
