--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,10 @@ local_backend: true
 
 backend:
   name: git-gateway
+  branch: main
+
+site_url: https://yazaki.lab.uec.ac.jp
+display_url: https://yazaki.lab.uec.ac.jp
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
